--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.2.4",
+    "vant": "^4.9.8",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
